--- a/lvtn/package.json
+++ b/lvtn/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
+    "javascript-time-ago": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
