--- a/lvtn/package.json
+++ b/lvtn/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^6.0.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -11,6 +12,7 @@
     "clsx": "^1.1.1",
     "javascript-time-ago": "^2.5.1",
     "jwt-decode": "^3.1.2",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
@@ -19,7 +21,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "reactstrap": "^9.0.3",
     "redux-saga": "^1.1.3",
+    "sass": "^1.52.2",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
