--- a/lvtn/package.json
+++ b/lvtn/package.json
@@ -20,6 +20,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.1",
     "reactstrap": "^9.0.3",
     "redux-saga": "^1.1.3",
