--- a/STU.LVTN.SERVER.csproj
+++ b/STU.LVTN.SERVER.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
+    <PackageReference Include="Twilio" Version="5.70.0" />
   </ItemGroup>
 
 </Project>
