add function forgot password

--- a/lvtn/.env
+++ b/lvtn/.env
@@ -1,2 +1,5 @@
 REACT_APP_BASE_IMG_URL=https://drive.google.com/uc?export=view&id=
+
 REACT_APP_HOST=https://localhost:7298
+
+<!-- REACT_APP_HOST=https://lvtnserver.azurewebsites.net -->
